--- a/cosmosc2-tool-planetviewer/package.json
+++ b/cosmosc2-tool-planetviewer/package.json
@@ -15,9 +15,17 @@
     "acorn": "npm:acorn-with-stage3"
   },
   "dependencies": {
-    "@cosmosc2/tool-common": "~5.0.0",
+    "@cosmosc2/tool-common": "~5.0.1-beta.2",
     "cesium": "1.82.1",
-    "sprintf-js": "1.1.2"
+    "sprintf-js": "1.1.2",
+    "portal-vue": "2.1.7",
+    "single-spa-vue": "2.5.1",
+    "systemjs-webpack-interop": "2.3.7",
+    "vue": "2.6.14",
+    "vue-router": "3.5.2",
+    "vuejs-dialog": "1.4.2",
+    "vuetify": "2.5.8",
+    "vuex": "3.6.2"    
   },
   "devDependencies": {
     "@vue/cli": "4.5.13",
