Fix router and sync other files

--- a/cosmosc2-tool-planetviewer/babel.config.json
+++ b/cosmosc2-tool-planetviewer/babel.config.json
@@ -1,6 +1,11 @@
 {
   "presets": ["@vue/cli-plugin-babel/preset"],
   "plugins": [
-    "babel-plugin-istanbul"
+    [
+      "babel-plugin-istanbul",
+      {
+        "extension": [".js", ".vue"]
+      }
+    ]
   ]
 }
